Fix: Minor Convention

--- a/task5/Football_Players (1).ipynb
+++ b/task5/Football_Players (1).ipynb
@@ -693,7 +693,7 @@
    ],
    "source": [
     "for x in range(len(df['Club'])):\n",
-    "    if df['Club'][x] == '-':\n",
+    "    if df['Club'][x] == 'Olympique Lyonnais':\n",
     "        df['Club'][x] = 'OL Lyon'\n",
     "    else: \n",
     "        pass\n",
